vpcwith 4 sub nets,nat,igw,security group,instane in private ip .yml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: 'create a vpc'
Parameters:
  keyname:
    Description: key name
    Type: AWS::EC2::KeyPair::KeyName
    Default: 22
Resources:
  myVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.10.0.0/16
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: ibex-vpc
  subnetpub1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1a
      VpcId: !Ref myVPC
      CidrBlock: 10.10.1.0/24
      Tags:
        - Key: Name
          Value: ibex-pub1
  subnetNamepub2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1b
      VpcId: !Ref myVPC
      CidrBlock: 10.10.2.0/24
      Tags:
        - Key: Name
          Value: ibex-pub2
  subnetNamepri1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1a
      VpcId: !Ref myVPC
      CidrBlock: 10.10.3.0/24
      Tags:
        - Key: Name
          Value: ibex-pri1
  subnetNamepri2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1b
      VpcId: !Ref myVPC
      CidrBlock: 10.10.4.0/24
      Tags:
        - Key: Name
          Value: ibex-pri2
  routeTableName1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref myVPC
      Tags:
        - Key: Name
          Value: ibex-pub-routeSecurityGroupsIds
  routeTableName2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref myVPC
      Tags:
        - Key: Name
          Value: ibex-pri-routeSecurityGroupsIds
  routeTableAssocName1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref subnetpub1
      RouteTableId: !Ref routeTableName1
  routeTableAssocName2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref subnetNamepub2
      RouteTableId: !Ref routeTableName1
  routeTableAssocName3:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref subnetNamepri1
      RouteTableId: !Ref routeTableName2
  routeTableAssocName4:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref subnetNamepri2
      RouteTableId: !Ref routeTableName2
  igwName:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: ibex-igw
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref myVPC
      InternetGatewayId: !Ref igwName
  routeName1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref routeTableName1
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref igwName
  eipName:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  LogicalId:
    Type: AWS::EC2::NatGateway
    DependsOn : eipName
    Properties:
      AllocationId: !GetAtt eipName.AllocationId
      SubnetId: !Ref subnetpub1
      Tags:
        - Key: Name
          Value: ibex-eip
  routeName2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref routeTableName2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref LogicalId
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http to client host
      VpcId: !Ref myVPC        
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      KeyName: !Ref keyname
      ImageId: ami-00eb20669e0990cb4
      InstanceType: t2.micro     
      SubnetId: !Ref subnetpub1
      AvailabilityZone: us-east-1a
      SecurityGroupIds: 
        - !Ref InstanceSecurityGroup
      Tags:
        - Key: Name
          Value: private
